--- a/index.html
+++ b/index.html
@@ -1196,7 +1196,7 @@ clip.trim(0, 30)
     <!-- Header -->
     <header class="header fade-in">
       <div class="brand">
-        <div class="logo" role="img" aria-label="Logo">
+        <div class="logo" role="https://i.pinimg.com/736x/01/08/4b/01084b0c0bfe1e895273fb83212ab47c.jpg" aria-label="Logo">
           <i class="fas fa-gamepad"></i>
         </div>
         <div class="brand-info">
